# galaxy

./: CMakeLists.txt  LICENSE  README.md
cmake/: ECMFindModuleHelpers.cmake  FindPixman.cmake  FindWayland.cmake  FindWaylandProtocols.cmake  FindWaylandScanner.cmake
src/: CMakeLists.txt  compositor.cpp  compositor.h  events.cpp  events.h  main.cpp
src/core/: cursor.cpp  cursor.h
src/include/: wlroots_full.h
src/utils/: command_line_helper.cpp  command_line_helper.h
